--- a/Nhom31.yml
+++ b/Nhom31.yml
@@ -1,21 +1,12 @@
 ---
-- name: Tạo các Loopback Interface và Hiển thị địa chỉ IP của cổng trên thiết bị Cisco
+- name: Lấy thông tin IP của các thiết bị Cisco
   hosts: cisco_routers
   tasks:
-    - name: Create and Set loopback IPv4 address
-      ios_l3_interface:
-        name: Loopback{{ item.number }}
-        ipv4: 10.100.{{ item.number }}.1/24
-      with_items:
-        - { number: 94 }
-        - { number: 95 }
-        - { number: 96 }
+    - name: Lấy thông tin về các thiết bị Cisco
+      ios_facts:
+      register: ios_facts_result
 
-    - name: Hiển thị địa chỉ IP của tất cả các cổng
-      ios_command:
-        commands:
-          - show ip interface brief
-      register: show_ip
-
-    - debug: 
-        var: show_ip.stdout_lines
+    - name: Hiển thị thông tin về IP của các thiết bị
+      debug: 
+        msg: "Địa chỉ IP của thiết bị {{ item.key }} là {{ item.value.ipv4 }}"
+      loop: "{{ ios_facts_result.ansible_facts['ansible_net_all_ipv4_addresses'] | dict2items }}"
